syntax = "proto3";
package pb;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "Otaru API";
    version: "1.0";
    contact: {
      name: "Otaru project";
      url: "https://github.com/nyaxt/otaru";
      email: "ueno@nyaxtstep.com";
    };
  };
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

message ListDirRequest {
  string path = 1;
}

message ListDirResponse {
  message Entry {
    uint64 id = 1;
    string name = 2;
    string type = 3;
    int64 size = 4;
    uint32 uid = 5;
    uint32 gid = 6;
    uint32 perm_mode = 7;
    int64 modified_time = 8;
  }

  repeated Entry entry = 1;
}

service FileSystemService {
  rpc ListDir(ListDirRequest) returns (ListDirResponse) {
    option (google.api.http) = {
      get: "/api/v1/filesystem/ls"
    };
  }
}

message GetBlobstoreConfigRequest {
}

message GetBlobstoreConfigResponse {
  string backend_impl_name = 1;
  string backend_flags = 2;
  string cache_impl_name = 3;
  string cache_flags = 4;
}

message ReduceCacheRequest {
  bool dry_run = 1;
  string desired_size = 2;
}

message ReduceCacheResponse {
  bool success = 1;
  string error_message = 2;
}

message GetEntriesRequest {
}

message GetEntriesResponse {
  message Entry {
    string blob_path = 1;
    string state = 2;
    int64 blob_len = 3;
    int64 valid_len = 4;
    int64 sync_count = 5;
    int64 last_used = 6;
    int64 last_write = 7;
    int64 last_sync = 8;
    int64 number_of_writer_handles = 9;
    int64 number_of_handles = 10;
  }
  repeated Entry entry = 1;
}

service BlobstoreService {
  rpc GetConfig(GetBlobstoreConfigRequest) returns (GetBlobstoreConfigResponse) {
    option (google.api.http) = {
      get: "/api/v1/blobstore/config"
    };
  };

  rpc GetEntries(GetEntriesRequest) returns (GetEntriesResponse) {
    option (google.api.http) = {
      get: "/api/v1/blobstore/entries"
    };
  };

  rpc ReduceCache(ReduceCacheRequest) returns (ReduceCacheResponse) {
    option (google.api.http) = {
      post: "/api/v1/blobstore/reduce_cache"
      body: "*"
    };
  };
}

message GetINodeDBStatsRequest {
}

message GetINodeDBStatsResponse {
  int64 last_sync = 1;
  int64 last_tx = 2;
  uint64 last_id = 3;
  uint64 version = 4;
  uint64 last_ticket = 5;
  uint32 number_of_node_locks = 6;
}

service INodeDBService {
  rpc GetINodeDBStats(GetINodeDBStatsRequest) returns (GetINodeDBStatsResponse) {
    option (google.api.http) = {
      get: "/api/v1/inodedb/stats"
    };
  }
}

message GetCategoriesRequest {
}

message LoggerCategory {
  string category = 1;
  uint32 level = 2;
}

message GetCategoriesResponse {
  repeated LoggerCategory category = 1;
}

message SetCategoryRequest {
  string category = 1;
  uint32 level = 2;
}

message SetCategoryResponse {
}

message QueryLogsRequest {
  uint32 min_id = 1;
  repeated string category = 2;
  uint32 limit = 3;
}

message QueryLogsResponse {
  message Entry {
    uint32 id = 1;
    string log = 2;
    int64 time = 3;
    string location = 4;
    string category = 5;
  }
  repeated Entry entry = 1;
}

service LoggerService {
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse) {
    option (google.api.http) = {
      get: "/api/v1/logger/categories"
    };
  }

  rpc SetCategory(SetCategoryRequest) returns (SetCategoryResponse) {
    option (google.api.http) = {
      post: "/api/v1/logger/category/{category}"
      body: "level"
    };
  }

  rpc QueryLogs(QueryLogsRequest) returns (QueryLogsResponse) {
    option (google.api.http) = {
      get: "/api/v1/logger/logs"
    };
  }
}

message GetSystemInfoRequest {
}

message SystemInfoResponse {
  string go_version = 1;
  string os = 2;
  string arch = 3;

  uint32 num_goroutine = 4;

  string hostname = 5;
  uint64 pid = 6;
  uint64 uid = 7;

  uint64 mem_alloc = 8;
  uint64 mem_sys = 9;

  uint32 num_gc = 10;
  uint32 num_fds = 11;
}

message GetVersionRequest {
}

message VersionResponse {
  string git_commit = 1;
  string build_host = 2;
  string build_time = 3;
}

service SystemInfoService {
  rpc GetSystemInfo(GetSystemInfoRequest) returns (SystemInfoResponse) {
    option (google.api.http) = {
      get: "/api/v1/system/info"
    };
  };

  rpc GetVersion(GetVersionRequest) returns (VersionResponse) {
    option (google.api.http) = {
      get: "/api/v1/system/version"
    };
  };
}
